<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Explicit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="warning">Warning!!!</string>
    <string name="contains">This app contains material</string>
    <string name="appropriate">not appropriate for children!</string>
    <string name="cont">Continue?</string>
    <string name="accept">Accept</string>
    <string name="verifyAge">Date of Birth:</string>

</resources>
