<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#ff000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/warning"
        android:id="@+id/warningText"
        android:textColor="#ffdc0014"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contains"
        android:id="@+id/line1"
        android:layout_marginTop="60dp"
        android:textColor="#ffdc0014"
        android:layout_below="@+id/warningText"
        android:layout_alignRight="@+id/line2"
        android:layout_alignEnd="@+id/line2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/appropriate"
        android:id="@+id/line2"
        android:layout_below="@+id/line1"
        android:layout_centerHorizontal="true"
        android:textColor="#ffdc0014" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cont"
        android:id="@+id/contin"
        android:textColor="#ffdc0014"
        android:background="#ffdcd8db"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/agePicker"
        android:calendarViewShown="false"
        android:layout_above="@+id/contin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="57dp"
        android:background="#fffbf3f7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/verifyAge"
        android:id="@+id/verify"
        android:textColor="#ffdc0014"
        android:layout_above="@+id/agePicker"
        android:layout_alignRight="@+id/warningText"
        android:layout_alignEnd="@+id/warningText"
        android:layout_marginBottom="40dp" />

</RelativeLayout>
